Polishing.
See #3373